force-app/main/default/objects/Out_Of_Office_Log__c/Out_Of_Office_Log__c.object-meta.xml
<CustomObject>
    <description>Custom Object for Out of Office Log record.</description>
    <label>Out Of Office Log</label>
    <nameField>
        <displayFormat>OOO-{0000}</displayFormat>
        <label>Out Of Office Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Out Of Office Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>