force-app/main/default/objects/Out_Of_Office_Log__c/fields/Backup_Person__c.field-meta.xml
<CustomField>
    <fullName>Backup_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The person you want records reassigned to</inlineHelpText>
    <label>Backup Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Out_Of_Office_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>