force-app/main/default/objects/Out_Of_Office_Log__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>The end date for time off. This should be the last day of leave.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>