force-app/main/default/objects/Out_Of_Office_Log__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <label>End Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>