force-app/main/default/objects/Out_Of_Office_Log__c/fields/Full_Name_of_Backup_Person__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_of_Backup_Person__c</fullName>
    <formula>Backup_Person__r.LastName &amp; &quot;,&quot; &amp;  Backup_Person__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name of Backup Person</label>
    <type>Text</type>
</CustomField>