force-app/main/default/objects/Out_Of_Office_Log__c/fields/Full_name_of_person_taking_time_off__c.field-meta.xml
<CustomField>
    <fullName>Full_name_of_person_taking_time_off__c</fullName>
    <formula>Person_taking_time_off__r.LastName &amp; &quot;,&quot; &amp;  Person_taking_time_off__r.FirstName</formula>
    <label>Full name of person taking time off</label>
    <type>Text</type>
</CustomField>