force-app/main/default/objects/Out_Of_Office_Log__c/fields/Person_taking_time_off__c.field-meta.xml
<CustomField>
    <fullName>Person_taking_time_off__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The person taking time off</inlineHelpText>
    <label>Person taking time off</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Out_Of_Office_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>