force-app/main/default/objects/Out_Of_Office_Log__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>The start date for time off. This should be the first day of leave.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>