force-app/main/default/objects/Out_Of_Office_Log__c/validationRules/Backup_Person_can_not_equal_OOO_Person.validationRule-meta.xml
<ValidationRule>
    <fullName>Backup_Person_can_not_equal_OOO_Person</fullName>
    <active>true</active>
    <errorConditionFormula>Backup_Person__c  =  Person_taking_time_off__c</errorConditionFormula>
    <errorMessage>Backup Person can not be the same as the OOO Person</errorMessage>
</ValidationRule>