force-app/main/default/objects/Out_Of_Office_Log__c/validationRules/Start_Date_Greater_than_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Greater_than_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date_Time__c &gt;  End_Date_Time__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date/Time cannot be greater than End Date/Time</errorMessage>
</ValidationRule>