force-app/main/default/objects/Out_Of_Office_Log__c/listViews/Active_Tomorrow.listView-meta.xml
<ListView>
    <fullName>Active_Tomorrow</fullName>
    <columns>NAME</columns>
    <columns>Person_taking_time_off__c</columns>
    <columns>Backup_Person__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Comments__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date_Time__c</field>
        <operation>lessOrEqual</operation>
        <value>TOMORROW</value>
    </filters>
    <filters>
        <field>End_Date_Time__c</field>
        <operation>greaterOrEqual</operation>
        <value>TOMORROW</value>
    </filters>
    <label>Active Tomorrow</label>
</ListView>